unpackaged/main/default/objects/IndividualApplication/IndividualApplication.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>