unpackaged/main/default/objects/IndividualApplication/fields/Admissions_Counselor__c.field-meta.xml
<CustomField>
    <fullName>Admissions_Counselor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admissions Counselor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Counselor_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>