unpackaged/main/default/objects/IndividualApplication/fields/Admissions_Decision_Reason__c.field-meta.xml
<CustomField>
    <fullName>Admissions_Decision_Reason__c</fullName>
    <label>Admissions Decision Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>