unpackaged/main/default/objects/IndividualApplication/fields/Admissions_Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Admissions_Interview_Date__c</fullName>
    <label>Admissions Interview Date</label>
    <type>Date</type>
</CustomField>