unpackaged/main/default/objects/IndividualApplication/fields/Admissions_Interview_Result__c.field-meta.xml
<CustomField>
    <fullName>Admissions_Interview_Result__c</fullName>
    <label>Admissions Interview Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recommended</fullName>
            </value>
            <value>
                <fullName>Conditional</fullName>
            </value>
            <value>
                <fullName>Not Recommended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>