unpackaged/main/default/objects/IndividualApplication/fields/Alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email__c</fullName>
    <label>Alternate Email Address</label>
    <type>Email</type>
</CustomField>