unpackaged/main/default/objects/IndividualApplication/fields/Application_Fee_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Fee_Status__c</fullName>
    <label>Application Fee Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Waived</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>