unpackaged/main/default/objects/IndividualApplication/fields/Approved_By_Director__c.field-meta.xml
<CustomField>
    <fullName>Approved_By_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approved_Individual_Apps</relationshipName>
    <type>Lookup</type>
</CustomField>