unpackaged/main/default/objects/IndividualApplication/fields/Enrollment_Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Agreement_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enrollment Agreement Signed</label>
    <type>Checkbox</type>
</CustomField>