unpackaged/main/default/objects/IndividualApplication/fields/High_School_Diploma_Type__c.field-meta.xml
<CustomField>
    <fullName>High_School_Diploma_Type__c</fullName>
    <label>High School Diploma Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard High School Diploma</fullName>
            </value>
            <value>
                <fullName>GED</fullName>
            </value>
            <value>
                <fullName>Home School</fullName>
            </value>
            <value>
                <fullName>Foreign Equivalent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>