unpackaged/main/default/objects/IndividualApplication/fields/Interested_in_EAG_Grant__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_EAG_Grant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in EAG Grant</label>
    <type>Checkbox</type>
</CustomField>