unpackaged/main/default/objects/IndividualApplication/fields/Legal_State_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>Legal_State_of_Residence__c</fullName>
    <label>Legal State of Residence</label>
    <length>50</length>
    <type>Text</type>
</CustomField>