unpackaged/main/default/objects/IndividualApplication/fields/Target_Cohort_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Cohort_Start_Date__c</fullName>
    <label>Target Cohort Start Date</label>
    <type>Date</type>
</CustomField>