unpackaged/main/default/objects/IndividualApplication/fields/Tuition_Financing_Preference__c.field-meta.xml
<CustomField>
    <fullName>Tuition_Financing_Preference__c</fullName>
    <label>Tuition Financing Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Financial Aid (FAFSA)</fullName>
            </value>
            <value>
                <fullName>Military / VA</fullName>
            </value>
            <value>
                <fullName>Self-Pay / Cash</fullName>
            </value>
            <value>
                <fullName>Employer Sponsored</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>