unpackaged/main/default/objects/IndividualApplication/recordTypes/Student_Admissions.recordType-meta.xml
<RecordType>
    <fullName>Student_Admissions</fullName>
    <active>true</active>
    <label>Student Admissions</label>
</RecordType>